--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/api/server.js",
   "scripts": {
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./tests/**/*$NAME.test.js --exit",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,12 @@
     "mongodb": "^4.2.0"
   },
   "devDependencies": {
-    "eslint": "^8.3.0"
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "eslint": "^8.3.0",
+    "mocha": "^9.1.3",
+    "mongodb-memory-server": "^6.9.6",
+    "nodemon": "^2.0.15",
+    "sinon": "^12.0.1"
   }
 }
