--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
-    "mongodb": "^4.2.0"
+    "mongodb": "^4.2.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
