--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/api/server.js",
   "scripts": {
     "start": "node .",
-    "test": "mocha ./tests/**/*$NAME.test.js --exit",
+    "test": "mocha . --exit",
+    "test:all": "mocha ./tests/**/*$NAME.test.js --exit",
     "dev": "nodemon index.js"
   },
   "repository": {
